Fixed invisible text effect text bug
I don't know why, i'm not sure how, but this bug beyond human
comprehension has been fixed.

Something to do with either assigning elements as consts (i dont think so)
or not making sure the text is reasserted at start of function and assigned
as it's text content, i dont know why it changes to null but it does

Lesson learned: assume the text may change without any reason, at all
so i must store it and when i need to change i... change it to itself first?

--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -120,7 +120,6 @@ a:active {
 }
 
 .info-carousel-item[data-status="unknown"] {
-	display: none;
 	position: absolute;
 	transform: scale(0);
 	transition: 0s;
